@@ -141,32 +141,45 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.1.0</version>
-                </plugin>
-
-                <plugin>
-                    <artifactId>maven-resource-plugin</artifactId>
-                    <version>3.0.2</version>
-                </plugin>
-
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.0</version>
-                </plugin>
-
-                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.11.0</version>
                     <configuration>
-                        <source>17</source>   <!-- or 17 -->
-                        <target>17</target>   <!-- or 17 -->
+                        <source>17</source>
+                        <target>17</target>
+                        <compilerArgs>
+                            <arg>--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        </compilerArgs>
                     </configuration>
                 </plugin>
 
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.2.5</version>
+                    <configuration>
+                        <suiteXmlFiles>
+                            <suiteXmlFile>testng.xml</suiteXmlFile>
+                        </suiteXmlFiles>
+                    </configuration>
+
+                    <!-- use when you want to run the tests with JUnitRunner not TestNGRunner both on local and GitHub Actions -->
+                    <!--
+                    <configuration>
+                        <includes>
+                            <include>**/*Runner.java</include>
+                        </includes>
+                         Explicitly disable TestNG
+                        <properties>
+                            <property>
+                                <name>listener</name>
+                                <value></value>
+                            </property>
+                        </properties>
+                    </configuration> -->
+
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
-
 </project>
